--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "roboto-fontface": "*",
     "vue": "^3.4.37",
     "vue-i18n": "^9.14.0",
+    "vue3-persian-datetime-picker": "^1.2.2",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
